feat: add tags for author
